--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ theme:            basic
 website:          http://www.heetmouse.com
 #
 # 2. URL of this page
-url:              http://heetmouse.github.io/
+url:              http://heetmouse.github.io/heetmouse
 #
 # 3. About your kickstarter project
 project:
